--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,15 @@
-<footer class="site-footer">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61491966-2', 'auto');
+  ga('send', 'pageview');
+</script>
+</html>
+<!-- <footer class="site-footer">
 
   <div class="wrapper">
 
@@ -53,3 +64,4 @@
   </div>
 
 </footer>
+ -->
