--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    <!-- {% include header.html %} -->
+  {{ content }}
 
-    <!-- <div class="page-content">
-      <div class="wrapper"> -->
-        {{ content }}
-  <!--     </div>
-    </div> -->
+  {% include bottom.html %}
 
-    {% include footer.html %}
-
-  </body>
+</body>
 
 </html>
